support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_enum_badvalue.i
%module xxx

enum stuff {
   FOO = 'x',
   BAR = 3.14159
};

