support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_enum_badvalue.stderr
c_enum_badvalue.i:6: Error: Type error. Expecting an integral type
